Fix and updates (#43)
* Removal of unnecessary threads
* Uniform JsonMapper
* Reduce the storage messages when they can be emulated
* Try to get the next id item (for Jdbc) when not perfectly matching (e.g updates with timestamps)
* Support for multi-statement queries in MySQL (thanks .NET...)
* Generalize APIs approach
* Fixed regexp matching for websites
* Fixed missing "consumed" flag when replaying
* Handle MySQL Show warning (as not recorded by default)
* Storage id generate in advance to respect calls ordering (as it was before the refactoring)
* Uniform approach for recording plugins